Skills Screen Done

--- a/curriculo/src/styles/variables.sass
+++ b/curriculo/src/styles/variables.sass
@@ -1,7 +1,23 @@
 $font-family: 'Poppins', 'Nunito-Sans', sans-serif
 
-$h1-size: 2rem
+$h1-size-large: 2rem
+$h1-size-medium: 1.75rem
+$h1-size-small: 1.5rem
+
 
 $p-size: 1rem
 
 $photo: url('../../assets/img/carlos.marques.png')
+
+$hover-color:  #FFF
+
+$primary-light-text-color: #EFEFEF
+$primary-dark-text-color: #333333
+$secondary-text-color: #AAAAAA
+
+
+
+$main-color: #333333
+
+
+    
