--- a/curriculo/src/styles/components/mobileMenu.sass
+++ b/curriculo/src/styles/components/mobileMenu.sass
@@ -24,9 +24,10 @@
         outline: none
 
 .slideIn
-    transform: translateY(-100%)
-    transition: transform 1s
+    width: 100%
+    height: 100vh
+    display: none
 
     &.open
-        transform: translateY(0)
+        display: block
     
