--- a/curriculo/src/styles/components/navMenu.sass
+++ b/curriculo/src/styles/components/navMenu.sass
@@ -5,19 +5,17 @@
     display: flex
     flex-direction: column
     align-items: center
+    justify-content: center
     overflow: hidden
     background-color: variables.$main-color
     padding: 1rem
     height: 100%
     border: none
     text-align: center
-    
 
-    
-
-    @media (max-width: 768px)
-        width: 18rem
-        height: calc( 100vh - 34px )
+    @media (max-width: 1160px)
+        width: 100%
+        height: 100vh
         padding: 1rem
     div
         display: flex
@@ -35,18 +33,10 @@
         color: variables.$secondary-text-color
         font-size: 1.5rem
         text-align: center
-
-        @media (max-width: 768px)
-            font-size: 1.25rem
     img
         border-radius: 50%
         height: 200px
         width: 200px
-
-        @media (max-width: 768px)
-            max-Width: 768
-            height: 100px
-            width: 150px
          
 
     nav
@@ -81,5 +71,18 @@
 
     .download
         display: flex
-        justify-content: space-evenly
+        justify-content: space-evenly    
+        padding: .5rem
+        border-radius: 10px
         border: 1px solid variables.$primary-light-text-color
+        color: variables.$primary-light-text-color
+        background-color: variables.$main-color
+        cursor: pointer
+        font-size: 1rem
+        font-weight: bold
+        width: 10rem
+        text-decoration: none
+
+        &:hover
+            color: variables.$primary-dark-text-color
+            background-color: variables.$hover-color
