--- a/curriculo/src/styles/main.sass
+++ b/curriculo/src/styles/main.sass
@@ -9,17 +9,20 @@
 #loom-companion-mv3
     display: none
 
-body
-    background-color: rgba(119,119,119,0.2)
+#root
+    width: 100%
     display: flex
+    height: 100vh
     align-items: center
     justify-content: center
-    height: 100vh
     letter-spacing: 1px
     -webkit-font-smoothing: antialiased
-    @media (max-Width: 768px)
+
+    @media (max-width: 1160px)
         height: auto
-        justify-content: start
+
+body
+    background-color: rgba(119,119,119,0.2)
 
 header
     width: 100%
@@ -35,12 +38,13 @@ main
     border-radius: 10px
     max-width: 70rem
     height: 50rem
+    align-self: center
     box-shadow: .25rem .25rem .25rem.25rem #222
     background-color: #EFEFEF
     overflow: hidden
 
 
-    @media (max-width: 768px)
+    @media (max-width: 1160px)
         height: auto
         padding: 1rem
         margin: 66px 16px 16px 16px 
@@ -51,17 +55,17 @@ main
         flex-direction: column
         gap: 1rem
 
+    &:not(#Menu)
+        h1
+        color: variables.$primary-dark-text-color
+
+        p
+            text-align: justify
+            color: variables.$primary-dark-text-color
+
 h1
     font-size: variables.$h1-size-large
     line-height: variables.$h1-size-large*1.20
-
-    @media (max-width: 768px)
-        font-size: variables.$h1-size-medium
-        line-height: variables.$h1-size-medium*1.20 
-    
-    @media (max-width: 500px)
-        font-size: variables.$h1-size-small
-        line-height: variables.$h1-size-small*1.20 
 p
     font-size: variables.$p-size
     line-height: variables.$p-size*1.50
@@ -81,6 +85,19 @@ button
     &:hover
         color: variables.$primary-dark-text-color
         background-color: variables.$hover-color
+
+
+ul
+    padding-left: 1rem  
+
+    li
+        color: variables.$primary-dark-text-color
+        font-size: variables.$p-size
+        line-height: variables.$p-size*1.50
+        margin-left: .25rem
+
+.card
+        padding: 0 .5rem 0 0
 
 .active
     color: variables.$main-color
