--- a/curriculo/src/styles/components/navMenu.sass
+++ b/curriculo/src/styles/components/navMenu.sass
@@ -37,7 +37,11 @@
         border-radius: 50%
         height: 200px
         width: 200px
-         
+        
+        @media (max-width: 768px) 
+            width: 150px
+            height: 150px
+        
 
     nav
         display: flex
